--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -6,12 +6,13 @@
     <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for semantic tags</title>
-    
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
+
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
+        charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <meta charset="UTF-8">
-    
+
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
 
@@ -61,7 +62,7 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>Practical HTML5 Project's for Fun&Profit</h1>
+                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
                     <div class="data" id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
@@ -99,163 +100,174 @@
                         </ul>
                     </div>
                 </div><!-- end col-12 -->
-        <!--close top section - content area starts -->
-        <div class="data" id="html5stylecontent">
-            <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-            <div class="data" id="html5styleleftcol">
-                <h3>Cottages, converted barns, caravans</h3>
-                <img alt="Cottage interior" title="Cottage interior" height="225" src="../orris0/images/bda2.jpg"
-                    width="300"><br>The superb interior of one of our cottages
-            </div>
-            <nav class="data" id="html5stylenav"><!--use the semantic tag <nav>-->
-                <ul><!--start of menu list-->
-                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                    <li class="btn"><a href="index2.html" title="Frequently Asked Questions">Information</a></li>
-                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Local attractions">Attractions</a></li>
-                    <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-                    <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                </ul><!--end of menu list-->
-            </nav><!--</div> removed and replaced with </nav>-->
-            <div class="data" id="html5stylemidcol">
-                <h3>Situated in the BDA's beautiful countryside</h3>
-                <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif" height="229"
-                    width="398">
-            </div>
-            <br class="clear">
-            <div class="data" id="html5stylenavigation">
-                <ul>
-                    <li><a href="index2.html">Home</a></li>
-                    <li><a href="#">Buy Now!</a></li>
-                    <li><a href="about">About Us</a></li>
-                    <li><a href="#">Gift Ideas</a></li>
-                </ul>
-            </div>
-            <p class="data" id="intro">
-                Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.
-                Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
-                You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-            </p>
-            <p id="no-script">
-                We recommend that you have JavaScript enabled!
-            </p>
-            <p id="disclaimer">
-                Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
-                like people so their privacy should be respected.
-            </p>
-            <div class="data" id="news">
-                <h2>Latest News</h2>
-                <p>
-                    Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last
-                    night at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by
-                    the chef's own hands?
-                    <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
-                </p>
-                <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
-            </div>
-            <div>
-                <h2 class="heading">Our Celebrities</h2>
-                <p class="info">
-                    We have an ever changing roster of newly chipped celebrities. But it can take as little as a week
-                    for the little critters to realise they've been tagged - so you have to be fast!
-                </p>
-                <table class="data" id="celebs">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Occupation</th>
-                            <th>Approx. Location</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>203A</td>
-                            <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
-                            <td>Front-man</td>
-                            <td>Los Angeles</td>
-                            <td>$39.95</td>
-                        </tr>
-                        <tr>
-                            <td>141B</td>
-                            <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
-                            <td>Singer</td>
-                            <td>New York</td>
-                            <td>$39.95</td>
-                        </tr>
-                        <tr>
-                            <td>2031</td>
-                            <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
-                            <td>Producer</td>
-                            <td>New York</td>
-                            <td>$19.95</td>
-                        </tr>
-                        <tr>
-                            <td>007F</td>
-                            <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-                            <td>Singer</td>
-                            <td>Omaha</td>
-                            <td>$11.95</td>
-                        </tr>
-                        <tr>
-                            <td>8A05</td>
-                            <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
-                            <td>DJ</td>
-                            <td>London</td>
-                            <td>$19.95</td>
-                        </tr>
-                        <tr>
-                            <td>6636</td>
-                            <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-                            <td>Keytarist</td>
-                            <td>London</td>
-                            <td>$39.95</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div id="comment">
-                <h2>Leave a comment</h2>
-                name:<br />
-                <input type="text" /><br />
-                comment:<br />
-                <textarea rows="5" cols="30" name="comment"></textarea>
-            </div>
-
-            <h2>Fine Print</h2>
-            <p id="fine_print">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
-            </p>
-        </div><!-- end content -->
-        <!--<div id=footer"> changed to <footer>-->
-        <footer role="contentinfo" class="row">
-            <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html"
-                class="back-to-top d-flex align-items-center justify-content-center"><i
-                    class="bi bi-arrow-up-short"></i></a>
-            <div class="col-12">
-                <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-                    <div id="farewell">Come back and visit us soon!
-                        <p>
-                            &copy; Copyright 2010 CelebriTracker Productions
-                        </p>
+                <!--close top section - content area starts -->
+                <div class="data" id="html5stylecontent">
+                    <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                    <div class="data" id="html5styleleftcol">
+                        <h3>Cottages, converted barns, caravans</h3>
+                        <img alt="Cottage interior" title="Cottage interior" height="225"
+                            src="../orris0/images/bda2.jpg" width="300"><br>The superb interior of one of our cottages
                     </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Vendor JS Files --
+                    <nav class="data" id="html5stylenav"><!--use the semantic tag <nav>-->
+                        <ul><!--start of menu list-->
+                            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                            <li class="btn"><a href="index2.html" title="Frequently Asked Questions">Information</a>
+                            </li>
+                            <li class="btn"><a href="HTML5-Ch1-7.html" title="Local attractions">Attractions</a></li>
+                            <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                            <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                        </ul><!--end of menu list-->
+                    </nav><!--</div> removed and replaced with </nav>-->
+                    <div class="data" id="html5stylemidcol">
+                        <h3>Situated in the BDA's beautiful countryside</h3>
+                        <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif"
+                            height="229" width="398">
+                    </div>
+                    <br class="clear">
+                    <div class="data" id="html5stylenavigation">
+                        <ul>
+                            <li><a href="index2.html">Home</a></li>
+                            <li><a href="#">Buy Now!</a></li>
+                            <li><a href="about">About Us</a></li>
+                            <li><a href="#">Gift Ideas</a></li>
+                        </ul>
+                    </div>
+                    <p class="data" id="intro">
+                        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring
+                        service.
+                        Need to know where in the world the best bands, musicians or producers are within 2.2 square
+                        meters?
+                        You've come to the right place. We have a very special special on B-grade celebs this week, so
+                        hurry in!
+                    </p>
+                    <p id="no-script">
+                        We recommend that you have JavaScript enabled!
+                    </p>
+                    <p id="disclaimer">
+                        Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
+                        kind of
+                        like people so their privacy should be respected.
+                    </p>
+                    <div class="data" id="news">
+                        <h2>Latest News</h2>
+                        <p>
+                            Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted
+                            last
+                            night at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and
+                            retrieved by
+                            the chef's own hands?
+                            <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+                        </p>
+                        <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+                    </div>
+                    <div>
+                        <h2 class="heading">Our Celebrities</h2>
+                        <p class="info">
+                            We have an ever changing roster of newly chipped celebrities. But it can take as little as a
+                            week
+                            for the little critters to realise they've been tagged - so you have to be fast!
+                        </p>
+                        <table class="data" id="celebs">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Occupation</th>
+                                    <th>Approx. Location</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>203A</td>
+                                    <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
+                                    <td>Front-man</td>
+                                    <td>Los Angeles</td>
+                                    <td>$39.95</td>
+                                </tr>
+                                <tr>
+                                    <td>141B</td>
+                                    <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
+                                    <td>Singer</td>
+                                    <td>New York</td>
+                                    <td>$39.95</td>
+                                </tr>
+                                <tr>
+                                    <td>2031</td>
+                                    <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
+                                    <td>Producer</td>
+                                    <td>New York</td>
+                                    <td>$19.95</td>
+                                </tr>
+                                <tr>
+                                    <td>007F</td>
+                                    <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                                    <td>Singer</td>
+                                    <td>Omaha</td>
+                                    <td>$11.95</td>
+                                </tr>
+                                <tr>
+                                    <td>8A05</td>
+                                    <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
+                                    <td>DJ</td>
+                                    <td>London</td>
+                                    <td>$19.95</td>
+                                </tr>
+                                <tr>
+                                    <td>6636</td>
+                                    <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                                    <td>Keytarist</td>
+                                    <td>London</td>
+                                    <td>$39.95</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="comment">
+                        <h2>Leave a comment</h2>
+                        name:<br />
+                        <input type="text" /><br />
+                        comment:<br />
+                        <textarea rows="5" cols="30" name="comment"></textarea>
+                    </div>
+
+                    <h2>Fine Print</h2>
+                    <p id="fine_print">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.
+                    </p>
+                </div><!-- end content -->
+                <!--<div id=footer"> changed to <footer>-->
+                <footer role="contentinfo" class="row">
+                    <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html"
+                        class="back-to-top d-flex align-items-center justify-content-center"><i
+                            class="bi bi-arrow-up-short"></i></a>
+                    <div class="col-12">
+                        <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                            <div id="farewell">Come back and visit us soon!
+                                <p>
+                                    &copy; Copyright 2010 CelebriTracker Productions
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+                <!-- Vendor JS Files --
 			    <script src="../orris0/main.js"></script> -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-        <script src="../orris0/bootstrap.bundle.min.js"></script>
+                <script src="../orris0/bootstrap.bundle.min.js"></script>
 
-    </div><!-- end wrapper -->
-    <script type="text/javascript" src="js/jquery-1.7.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+            </div><!-- end wrapper -->
+            <script type="text/javascript" src="js/jquery-1.7.js"></script>
+            <script type="text/javascript" src="js/script.js"></script>
 </body><!-- end body  -->
 
 </html>
