--- a/html5-nav.html
+++ b/html5-nav.html
@@ -15,10 +15,54 @@
     <title>The nav tag</title>
 
     <link rel="stylesheet" type="text/css" href="..\orris0\Practical HTML5 Projects\Code01\nav-style.css">
-    <!--[if lte IE 8]>
-<script src="html5.js">
-</script>
-<![endif]-->
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
+        charset="utf-8" />
+    <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts.js"></script>
+    <meta charset="UTF-8">
+
+    <script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="../orris0/js/script.js"></script>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="format-detection" content="telephone=no">
+    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta name="description" content="A simple HTML5 Template for new projects.">
+    <meta name="author" content="Orris A BakerJr">
+    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
+    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:image" content="image.png">
+    <meta name="theme-color" content="#712cf9">
+    <meta name="keywords" content="HTML5, Node.js, Jquery">
+    <meta name="author" content="Ian Andolina">
+    <!-- Optional Metadata -->
+    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
+        <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
+    <link rel="stylesheet" href="./CSS/nav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
+    <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
+    <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+    <link rel="author" href="mailto:bakerorris0@gmail.com">
+    <link rel="author" type="text/html" href="https://orris0.github.io/orris0/index.html">
+    <!-- Bootstrap Icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css">
+    <!-- SimpleLightbox plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
+
 </head>
 
 <body>
