--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -97,7 +97,33 @@
             <!--<div id=footer"> changed to <footer>-->
 		    <footer role="contentinfo" class="row">
                 <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-                <div class="col-12">
+                 <div id="container">
+                <p>&nbsp;</p>
+                <p>Tour Orris (default)</p>
+                <p>
+                    <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
+					<a href="gallery-page-validated.html">Page 2</a>
+                    <!-- <a href="html5-nav.html">Page 2</a> --
+                    <a href="simplistic-side-by-side.html">Page 3</a>
+                    <a href="simplistic-html5-java.html">Page 4</a>
+                    <a href="simplistic-html5.html">Page 5</a>
+                    <a href="gallery-one-col.html">Page 6</a>
+                    <a href="gallery-2col.html">Page 7</a>
+                </p>
+                <p>&nbsp;</p>
+                <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                    <a href="gallery-3col-mix.html">Page 1</a>
+                    <a href="gallery-page-validated.html">Page 2</a>
+                    <a href="squares-html5.html">Page 3</a>
+                    <a href="horiz-vert-menu.html">Page 4</a>
+                    <a href="fig2-nifty.html">Page 5</a>
+                    <a href="starter-page.html">Page 6</a>
+                    <a href="index2.html">Page 7</a>
+                </p>
+                <p>&nbsp;</p>
+            </div>
+				
+				<div class="col-12">
                     <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
                         <div id="farewell">Come back and visit us soon!
                             <p> &copy; Copyright 2010 CelebriTracker Productions</p>
