--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -59,17 +59,51 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
 
 </head>
-
 <body>
     <div class="row">
         <div class="col-12">
             <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
+        <div class="data" id="html5style2banner">
+            <h1>StarTrackr!</h1>
+        </div>
+    </header>
+	<br class="clear">
+    <!--close top section - content area starts -->
+    
+    <div class="data" id="html5style2content">
+        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+        <div class="data" id="html5style2leftcol">
+            <h3>Cottages, converted barns, caravans</h3>
+            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+            <br>The superb interior of one of our cottages
+        </div>
+        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+            <ul><!--start of menu list-->
+                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+            </ul><!--end of menu list-->
+        </nav><!--</div> removed and replaced with </nav>-->
+        <div class="data" id="html5style2midcol">
+            <h3>Situated in the BDA's beautiful countryside</h3>
+            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+        </div>
+        <br class="clear">
+    </div><!--content section closed-->
+<!--
+<body>
+    <div class="row">
+        <div class="col-12">
+            <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>--
                 <div id="banner">
                     <h1>StarTrackr!</h1>
                 </div>
             </header>
 	        <br class="clear">
-            <!--close top section - content area starts -->
+            <!--close top section - content area starts --
     
             <div id="content">
                 <h2>Award winning accommodation, self catering or bed and breakfast</h2>
@@ -78,8 +112,8 @@
                     <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                     <br>The superb interior of one of our cottages
                 </div>
-                <nav><!--use the semantic tag <nav>-->
-                    <ul><!--start of menu list-->
+                <nav><!--use the semantic tag <nav>--
+                    <ul><!--start of menu list--
                         <li class="btn"> <a href="./gallery-page-validated.html" title="Accommodation">Accommodation</a></li>
                         <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                         <li class="btn"><a href="./index.html" title="Frequently Asked Questions">Information</a></li>
@@ -87,7 +121,7 @@
                         <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
                         <li class="btn"><a href="./HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                     </ul><!--end of menu list-->
-                </nav><!--</div> removed and replaced with </nav>-->
+                </nav><!--</div> removed and replaced with </nav>--
                 <div id="midcol">
                     <h3>Situated in the BDA's beautiful countryside</h3>
                     <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
